[package]
name = "core"
version = "1.2.0"
authors = ["Jonas F. Franke <me@binaryblazer.me>"]
license = "BSD-3-Clause"
repository = "https://github.com/binary-blazer/blink-http"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
async-std = "1.13.0"
